Fixed home height on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -64,7 +64,7 @@
   .home {
     justify-content: center;
     align-items: center;
-    height: 95vh;
+    height: 100vh;
   }
 
   .headerContainer {
